Fix Editor Scrollbar issue. #535

--- a/MarkdownMonster/Editor/editor.css
+++ b/MarkdownMonster/Editor/editor.css
@@ -60,3 +60,7 @@
 .ace_search_options > span:hover {
     background: #777 !important;    
 }
+
+body .ace_scrollbar-h {
+  overflow-x: auto;
+}
